@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------
-** Ecasound - User-visible changes (NEWS)      (last edited: 110302) **
+** Ecasound - User-visible changes (NEWS)      (last edited: 130302) **
 -----------------------------------------------------------------------
 
 About the version numbers... "vX.Y[.Z][devT]" :
@@ -93,6 +93,10 @@ Last officially released version is -*> v2.0.4 *-
 	- fixed: if compiled with --with-largefile, when closing 
 		 output wav files, riff header block was written 
 		 over start of audio data
+	- fixed: -eemb wasn't working properly, affected the
+	         'metronome' preset
+	- fixed: recording offset not set when not in 
+		 multitrack mode
 16012002 (v2.1dev7)
 	- edi-entries: edi-12
 	- added: a watchdog thread that handles thread cleanup; 
